2009-03-08 0.61 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* valgrind found a possible uninitialized value
	* Restriction in print () was only for really old perls
	* Fix for bind_columns () initialisation (vincent, RT#43927)

2009-01-27 0.60 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Optimize for threaded perls. (Goro Fuji, RT#42517)
	  Non-threaded perls won't notice

2009-01-23 0.59 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Wrong e-mail in META.yml
	* Missing $IO argument in bind_columns example (docs only)
	* Upped Copyright notices to 2009
	* Added warning for parse () (RT#42261)
	* Small optimisations (Goro Fuji, RT#42517)
	* ppport.h updated to 3.15
	* Added git clone command to README
	* ppport.h updated to 3.16-pre
	* Optimize getline/print method calls (Goro Fuji, RT#42517)
	* Decode *_char attributes for perl 5.8.2 and up

2008-10-30 0.58 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Small typo in test message (RT#40410, JPL)
	* Parse error test on "\0 (RT#40507)
	* Fixed allow_loose_escapes bug disclosed by RT#40507

2008-10-21 0.57 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Don't bootstrap twice. Don't know how/when it came in there

2008-10-21 0.56 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Update to ppport.h 3.14_01
	* Updated docs (Unicode, TODO, Release Plan)
	* As Text::CSV::Encoded is about to be released, refer to it
	  in the documentation
	* Default for eol is "", undef now treated as ""
	* Don't print $\ twice (eol prevails over $\ in ->print ())
	  Fix only works in perl5.8 and up
	* Undef treated as 0 for boolean attributes
	* Trailing whitespace in pod removed
	* Sync up doc with latest Text::CSV::Encoded
	* YAML declared 1.4 (META.yml) instead of 1.1 (YAML)

2008-10-15 0.55 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Improve documentation on eol
	* Unicode on perl-5.8.[0-2] sucks. Don't use it!
	* Test error codes in expected IO failures
	* Allow SetDiag to be used as class method
	* Document the MS/Excel separation character